Fix body overflowing html with wide code blocks

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ body {
   margin: 0;
   box-shadow: 0 0 30px #888;
   display: flex;
+  /* Avoid horizontal overflow.
+   * Default (min-width: auto) prevents body from shrinking overwide content. */
+  min-width: 0;
 }
 h1, h2, h3, h4 { font-family: 'Nunito', sans-serif; }
 aside header {
